tests/semantic/comp_clauses/comp_clauses.err
Error: no valid overloads in file comp_clauses.dl at line 12
q(cat(x,x)) :- q(x).                // this one should
--^----------------------------------------------------
1 errors generated, evaluation aborted
